fix layout issues

--- a/src/components/PostBody/styles.module.scss
+++ b/src/components/PostBody/styles.module.scss
@@ -30,6 +30,10 @@
   figure {
     text-align: center;
 
+    & + figure {
+      margin-top: 2rem;
+    }
+
     img {
       max-width: 100%;
     }
