--- a/src/components/PostTags/styles.module.scss
+++ b/src/components/PostTags/styles.module.scss
@@ -1,6 +1,4 @@
 .tagsContainer {
-  margin-top: 1rem;
-
   span {
     display: inline-flex;
     justify-content: center;
@@ -11,7 +9,7 @@
     height: 2rem;
     padding: 0 1rem;
     border-radius: 1em;
-    margin-right: 0.5rem;
+    margin: 0 0.5rem 0.5rem;
 
     font: 400 1rem Roboto, sans-serif;
     color: var(--gray-800);
